# rsi_harness

./: .gitignore  .mcp.json  .rsi.yaml  AGENTS.md  CLAUDE.md  README.md  experts.yaml  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
docs/: EVALUATION.md  design.md
hooks/: hooks.json
rsi_harness/: __init__.py  adapters.py  cli.py  config.py  corpus.py  hooks.py  mcp_server.py  orchestrator.py  selector.py  state.py  verifier.py
skills/rsi-coding/: SKILL.md
tests/: test_rsi_harness.py
